# IB-Anslysis-Pro

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  USAGE.md  commands_reference.csv  iba.py  pyproject.toml  requirements.txt
src/: ibanalysis.py
src/ib_analysis/: ber.py  graph.py  xmit.py
src/ib_analysis/core/: operations.py
